Add task api, swagger
