# db/model/querier.go
@@ -9,7 +9,9 @@ import (
 )
 
 type Querier interface {
+	CreateTask(ctx context.Context, arg CreateTaskParams) (Task, error)
 	CreateUser(ctx context.Context, arg CreateUserParams) (User, error)
+	GetTasks(ctx context.Context, username string) ([]Task, error)
 	GetUser(ctx context.Context, username string) (User, error)
 }
 
